[metadata]
name = GeOptics
version = attr: geoptics.__version__
description = Light rays propagation in 2D
long_description = file: README.rst, NEWS, LICENSE.txt
author = Ederag
author_email = edera@gmx.fr
#keywords = one, two TODO
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Education
	# already in license metadata
	#License :: OSI Approved ::GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6

[options]
packages = find:
python_requires = '>=3'
install_requires =
	PyYAML
	# no pip PyQt5 available for python <= 3.4
	PyQt5; python_version > "3.4"
setup_requires =
	pytest-runner
	setuptools_hg
tests_require =
	pytest
	pytest-flake8
	flake8-per-file-ignores
	pytest-qt
	# pytest-xvfb is required for pytest-qt
	# otherwise if fails abruptly with InvocationError
	pytest-xvfb
	pytest-console-scripts

[options.entry_points]
# To provide executable scripts, use entry points in preference to the
# "scripts" keyword. Entry points provide cross-platform support and allow
# `pip` to create the appropriate form of executable for the target
# platform.
#
# For example, the following would provide a command called `geoptics`
# which executes the function `main` from this package when invoked:
# https://packaging.python.org/tutorials/distributing-packages/#console-scripts
# https://setuptools.readthedocs.io/en/latest/setuptools.html#automatic-script-creation
gui_scripts = 
	geoptics=geoptics.__main__:main

[aliases]
test=pytest

# remember, do not use [pytest] section
# https://docs.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner
[tool:pytest]
# look only in these directories
# this avoids catching of setup.py by the --doctest-modules
testpaths = geoptics tests

[flake8]
# for flake8-import-order
application_import_names = geoptics
ignore = 
	*.py W191, W293, E121, E101, E122, E126, E127, E265, D105, D107, D202
exclude =
	geoptics/guis/tk.py
per-file-ignores =
    setup.py: D100
    # double wildcard to match any directory
    # https://github.com/snoack/flake8-per-file-ignores/issues/8
    tests/**/*.py: D100, D101, D102, D103
