[metadata]
name = GeOptics
version = attr: geoptics.__version__
description = Light rays propagation in 2D
long_description = file: README.rst, NEWS, LICENSE.txt
author = Ederag
author_email = edera@gmx.fr
#keywords = one, two TODO
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Education
	# already in license metadata
	#License :: OSI Approved ::GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
	PyYAML
	PyQt5

[options.entry_points]
# To provide executable scripts, use entry points in preference to the
# "scripts" keyword. Entry points provide cross-platform support and allow
# `pip` to create the appropriate form of executable for the target
# platform.
#
# For example, the following would provide a command called `geoptics`
# which executes the function `main` from this package when invoked:
# https://packaging.python.org/tutorials/distributing-packages/#console-scripts
# https://setuptools.readthedocs.io/en/latest/setuptools.html#automatic-script-creation
gui_scripts = 
	geoptics=geoptics.__main__:main

[aliases]
test=pytest

[flake8]
# for flake8-import-order
application_import_names = geoptics
ignore = 
	W191, W293, E121, E101, E122, E126, E127, E265, D105, D107, D202,
	# waiting for https://github.com/PyCQA/pycodestyle/issues/880
	E402
	# https://peps.python.org/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
	W503
exclude =
	geoptics/guis/tk.py
per-file-ignores =
    setup.py: D100
    # double wildcard to match any directory
    # https://github.com/snoack/flake8-per-file-ignores/issues/8
    tests/**/*.py: D100, D101, D102, D103
